Separate stream concluding and enabling, for less janky frontend UX and no need to "disable" a key temporarily while concluding
